--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.28.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "body-parser": "^1.18.2",
+    "lodash": "^4.17.4",
+    "lowdb": "^1.0.0",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
