--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.4",
+    "lowdb": "^1.0.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.24.1",
     "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sequelize": "^6.28.0",
-    "web-vitals": "^2.1.4",
-    "body-parser": "^1.18.2",
-    "lodash": "^4.17.4",
-    "lowdb": "^1.0.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/user-event": "^14.4.3",
+    "jest": "^27.5.1"
   }
 }
